[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://shared/back/back_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://shared/game_end/game_end.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/icons/centerStar.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="end_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameName" type="Label" parent="."]
anchor_left = 0.268
anchor_top = 0.064
anchor_right = 0.724
anchor_bottom = 0.124
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="starsImage" type="TextureRect" parent="."]
anchor_left = 0.917755
anchor_top = 0.046
anchor_right = 0.973419
anchor_bottom = 0.151
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="nbStars" type="Label" parent="."]
anchor_left = 0.824219
anchor_top = 0.083
anchor_right = 0.913086
anchor_bottom = 0.133
margin_right = -5.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0.843137, 0.411765, 0.211765, 1 )
text = "234"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="time" type="Label" parent="."]
visible = false
anchor_left = 0.397821
anchor_top = 0.259649
anchor_right = 0.601922
anchor_bottom = 0.319649
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
text = "Ton temps"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="currentTime" type="Label" parent="."]
visible = false
anchor_left = 0.265214
anchor_top = 0.494737
anchor_right = 0.748612
anchor_bottom = 0.554737
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
text = "X Minutes et X secondes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bestTime" type="Label" parent="."]
visible = false
anchor_left = 0.274465
anchor_top = 0.810526
anchor_right = 0.757864
anchor_bottom = 0.870526
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
text = "X Minutes et X secondes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Replay" type="Button" parent="."]
anchor_left = 0.375
anchor_top = 0.627
anchor_right = 0.625
anchor_bottom = 0.767
margin_bottom = -0.799988
theme = ExtResource( 5 )
text = "Rejouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" parent="." instance=ExtResource( 3 )]
redirection = 1
[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
